letter-spacing and 'card' styles fix

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ h1 {
   font-size: 3.5rem;
   font-weight: 700;
   line-height: 1.2;
+  letter-spacing: -0.08rem;
 }
 
 h2 {
@@ -101,36 +102,42 @@ h2 {
   font-weight: 400;
   line-height: 1.2;
   margin: 0;
+  letter-spacing: -0.08889rem;
 }
 
 h3 {
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 1.2;
+  letter-spacing: -0.06rem;
 }
 
 h4 {
   font-size: 2.25rem;
   font-weight: 400;
   line-height: 1.4;
+  letter-spacing: -0.0875rem;
 }
 
 h5 {
   font-size: 1.66rem;
   font-weight: 500;
   line-height: 1.3;
+  letter-spacing: -0.005rem;
 }
 
 h6 {
   font-size: 1.11rem;
   font-weight: 600;
   line-height: 1.3;
+  letter-spacing: 0.0125rem;
 }
 
 .display-1 {
   font-size: 6.5rem;
   font-weight: 400;
   line-height: 1.1;
+  letter-spacing: -0.32639rem;
 }
 
 .fw-bold {
@@ -269,6 +276,8 @@ a.no-hover:hover {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 576px) {
@@ -371,16 +380,27 @@ a.no-hover:hover {
   display: flex;
   flex-direction: column;
   min-width: 0;
+  height: 100%;
   word-wrap: break-word;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
 
+.card a {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  text-decoration: none;
+}
+
 .card-body {
   flex: 1 1 auto;
   min-height: 1px;
   padding: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-img-top {
